/*
 * Copyright (c) 2018 by Delphix. All rights reserved.
 */

syntax = "proto3";

import "delphix.proto";

option java_multiple_files = true;

package com.delphix.virtualization.libs;

message RunBashInput {
  RemoteConnection remoteConnection = 1;
  string command = 2;
  map<string, string> variables = 3;
}

message RunBashOutput {
  int32 exitCode = 1;
  string stdout = 2;
  string stderr = 3;
}

message RunPowerShellInput {
  RemoteConnection remoteConnection = 1;
  string command = 2;
  map<string, string> variables = 3;
}

message RunPowerShellOutput {
  int32 exitCode = 1;
  string stdout = 2;
  string stderr = 3;
}

message RunSync {
  RemoteConnection remoteConnection = 1;
  string sourceDirectory = 2;
  string rsyncUser = 3;
}

message RunExpectInput {
  RemoteConnection remoteConnection = 1;
  string command = 2;
  map<string, string> variables = 3;
}
